[package]
name = "aehobak"
version = "0.0.18"
authors = ["David Michael Barr <b@rr-dav.id.au>"]
description = "Transcoder for bsdiff binary patches."
readme = "README.md"
categories = ["compression"]
keywords = ["bsdiff", "patch", "diff", "delta", "binary"]
license = "BSD-2-Clause"
homepage = "https://lib.rs/aehobak"
repository = "https://github.com/barrbrain/aehobak"
edition = "2021"
include = ["src/*.rs", "tests/*.rs", "benches/*.rs", "examples/*.rs", "LICENSE", "README.md", "Cargo.toml"]

[dependencies]
divsufsort = { version = "2.0.0", optional = true }
cdivsufsort = { version = "2.0.0", optional = true }
divsufsort-rs = { version = "0.6.0", optional = true, default-features = false }
streamvbyte64 = "0.2.0"
anyhow = "1.0"

[features]
default = ["divsufsort"]
divsufsort = ["dep:divsufsort"]
cdivsufsort = ["dep:cdivsufsort"]
divsufsort-rs = ["dep:divsufsort-rs"]
divsufsort-rs-rayon = ["divsufsort-rs/std"] # divsufsort-rs 0.6.0 use std feature to gate rayon support

[dev-dependencies]
bsdiff = "0.2.1"
gungraun = "0.18.1"
lz4_flex = "0.11.3"
quickcheck = "1.0.3"
rand_xoshiro = "0.7.0"

[profile.test]
opt-level = 2

[lib]
bench = false

[[bench]]
name = "all"
harness = false
